1.将消息分发器改为多线程版本 2.将协议处理器改为多线程版本